# linera-termux

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-arm.yml  build-rest-server.yml
chat-context/: Updating Linera Binary.md
plan/: implementation_plan.md
src/: graphql_proxy.rs  linera_manager.rs  main.rs  models.rs
web/: index.html
