[package]
name = "linera-rest-server"
version = "0.1.0"
edition = "2021"
authors = ["uratmangun"]
description = "REST API server for managing Linera service on Android/Termux"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for GraphQL proxy
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"

[[bin]]
name = "linera-rest-server"
path = "src/main.rs"
